--- a/style.scss
+++ b/style.scss
@@ -14,23 +14,16 @@ body {
   position: fixed;
   z-index: -1;
   top: 240px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.insta-section-h1 h1 {
-  font-size: 72px;
-  width: 47%;
-  line-height: 72px;
-  text-align: center;
-  color: #225732;
+  justify-content: center;
+  align-items: center;
+  h1 {
+    font-size: 72px;
+    width: 47%;
+    line-height: 72px;
+    text-align: center;
+    color: #225732;
+  }
 }
 
 .insta-feed {
@@ -40,33 +33,27 @@ body {
 .post {
   position: absolute;
   width: 33%;
-}
-
-.post img {
-  max-width: 100%;
+  img {
+    max-width: 100%;
+  }
 }
 
 .post1 {
   top: 60px;
 }
-
 .post2 {
   right: 6%;
   top: 50vh;
 }
-
 .post3 {
   top: 110vh;
   left: 6%;
 }
-
 .post4 {
   top: 200vh;
   right: 10%;
 }
-
 .post5 {
   top: 260vh;
   left: 10%;
 }
-/*# sourceMappingURL=style.css.map */
