--- a/style.scss
+++ b/style.scss
@@ -1,59 +1,55 @@
 body {
   font-family: 'Permanent Marker', cursive;
+  height: 3200px;
+  background: linear-gradient(180deg, rgba(187,225,249,1) 0%, rgba(222,242,255,1) 100%);
+  scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   background-color: #eff3f0;
-  scroll-behavior: smooth;
 }
+@import "insta-feed";
 
-.insta-section {
-  position: relative;
-  margin: 0 80px;
-}
 
-.insta-section-h1 {
-  position: fixed;
-  z-index: -1;
-  top: 240px;
+header {
+  z-index: 1000;
+  position: sticky;
+  top: 0;
+  padding: 12px 48px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  padding-top: 24px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  h1 {
-    font-size: 72px;
-    width: 47%;
-    line-height: 72px;
-    text-align: center;
-    color: #225732;
+  color:#093a3f;
+}
+
+.logo {
+ font-weight: bolder;
+ text-decoration: underline;
+}
+
+.menu {
+  flex-grow: 0.2;
+  ul {
+    width: 100%;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding-inline-start: 0px;
+    li {
+      list-style-type:none;
+      padding-inline-start: 0px;
+      cursor: pointer;
+      border-bottom: 1px solid transparent;
+      padding-bottom: 3px;
+      transition: 0.2s ease;
+    }
   }
 }
 
-.insta-feed {
-  position: relative;
-}
-
-.post {
-  position: absolute;
-  width: 33%;
-  img {
-    max-width: 100%;
+.cta {
+  padding: 6px 12px;
+  border: 2px solid #093a3f;
+  p {
+    margin: 0px;
   }
-}
-
-.post1 {
-  top: 60px;
-}
-.post2 {
-  right: 6%;
-  top: 50vh;
-}
-.post3 {
-  top: 110vh;
-  left: 6%;
-}
-.post4 {
-  top: 200vh;
-  right: 10%;
-}
-.post5 {
-  top: 260vh;
-  left: 10%;
 }
