--- a/_insta-feed.scss
+++ b/_insta-feed.scss
@@ -62,7 +62,7 @@ $parallax-ios         : true !default;
   justify-content: center;
   align-items: center;
   h1 {
-    font-size: 60px;
+    font-size: 80px;
     width: 47%;
     line-height: 72px;
     text-align: center;
@@ -82,6 +82,13 @@ $parallax-ios         : true !default;
   }
 }
 
+.post1, .post2, .post3, .post4, .post5 {
+  :nth-child(1) {
+    box-shadow: 5px 4px 15px 2px #80808040;
+    border-radius: 3px;
+  }
+}
+
 .post1 {
   top: 20px;
   position: relative;
@@ -96,7 +103,7 @@ $parallax-ios         : true !default;
     position: absolute;
     @include parallax(.3);
     top: 260px;
-    left: 1200px;
+    left: 1000px;
     width: 12%;
   }
   :nth-child(4) {
@@ -114,7 +121,7 @@ $parallax-ios         : true !default;
     position: absolute;
     @include parallax(.6);
     top: 500px;
-    right: 370px;
+    right: 600px;
     width: 10%;
   }
   :nth-child(3) {
